# Stonecraft

./: .gitignore  CMakeLists.txt  README.md  defs.h  main.cpp  pr.py  project_context.txt
engine/gameplay/: camera.cpp  camera.h  game.cpp  game.h  menu.cpp  menu.h  player.cpp  player.h  settings.h
engine/network/: client.cpp  client.h  enet_impl.cpp  lan_discovery.cpp  lan_discovery.h  network_manager.cpp  network_manager.h  protocol.h  server.cpp  server.h
engine/renderer/: crosshair.cpp  crosshair.h  hud.cpp  hud.h  selection.cpp  selection.h  shader.cpp  shader.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
engine/window/: window.cpp  window.h
engine/world/: chunk.cpp  chunk.h  perlin.h  save_manager.cpp  save_manager.h  world.cpp  world.h  world_utils.cpp  world_utils.h
shaders/: fragment.glsl  ui_fragment.glsl  ui_vertex.glsl  vertex.glsl
tools/logger/: logger.cpp  logger.h
tools/texture_generator/: generator.cpp  generator.h
